force-app/main/default/objects/Loan__c/fields/Amount_requested__c.field-meta.xml
<CustomField>
    <fullName>Amount_requested__c</fullName>
    <label>Amount requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>