force-app/main/default/objects/Loan__c/fields/application_id__c.field-meta.xml
<CustomField>
    <fullName>application_id__c</fullName>
    <label>Application_id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>