force-app/main/default/objects/Loan__c/fields/Applying_loan_For__c.field-meta.xml
<CustomField>
    <fullName>Applying_loan_For__c</fullName>
    <label>Applying loan For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>applying_loan_for</valueSetName>
    </valueSet>
</CustomField>