force-app/main/default/objects/Loan__c/fields/Earning_Status__c.field-meta.xml
<CustomField>
    <fullName>Earning_Status__c</fullName>
    <label>Earning Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>earning_status</valueSetName>
    </valueSet>
</CustomField>