force-app/main/default/objects/Loan__c/fields/flat_no__c.field-meta.xml
<CustomField>
    <fullName>flat_no__c</fullName>
    <label>Flat No</label>
    <length>60</length>
    <type>Text</type>
</CustomField>