force-app/main/default/objects/Loan__c/fields/land_mark__c.field-meta.xml
<CustomField>
    <fullName>land_mark__c</fullName>
    <label>Land Mark</label>
    <length>80</length>
    <type>Text</type>
</CustomField>