force-app/main/default/objects/Loan__c/fields/Loan_Id__c.field-meta.xml
<CustomField>
    <fullName>Loan_Id__c</fullName>
    <label>Loan Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>