force-app/main/default/objects/Loan__c/fields/Loan_Provider__c.field-meta.xml
<CustomField>
    <fullName>Loan_Provider__c</fullName>
    <label>Loan Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AVANSE</fullName>
            </value>
            <value>
                <fullName>PROPELLD</fullName>
            </value>
            <value>
                <fullName>AKSHAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>