force-app/main/default/objects/Loan__c/fields/Loan_status__c.field-meta.xml
<CustomField>
    <fullName>Loan_status__c</fullName>
    <label>Loan status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IN PROGRESS</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>