force-app/main/default/objects/Loan__c/fields/miles_loan_code__c.field-meta.xml
<CustomField>
    <fullName>miles_loan_code__c</fullName>
    <label>Miles Loan Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>