force-app/main/default/objects/Loan__c/fields/Occupation_type__c.field-meta.xml
<CustomField>
    <fullName>Occupation_type__c</fullName>
    <label>Occupation type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>occupation_type</valueSetName>
    </valueSet>
</CustomField>