force-app/main/default/objects/Loan__c/fields/PAN_number__c.field-meta.xml
<CustomField>
    <fullName>PAN_number__c</fullName>
    <label>PAN number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>