force-app/main/default/objects/Loan__c/fields/Permanent_address_same_as_Current__c.field-meta.xml
<CustomField>
    <fullName>Permanent_address_same_as_Current__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permanent address same as Current</label>
    <type>Checkbox</type>
</CustomField>