force-app/main/default/objects/Loan__c/fields/permanent_flat_no__c.field-meta.xml
<CustomField>
    <fullName>permanent_flat_no__c</fullName>
    <label>Permanent Flat No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>