force-app/main/default/objects/Loan__c/fields/permanent_land_mark__c.field-meta.xml
<CustomField>
    <fullName>permanent_land_mark__c</fullName>
    <label>Permanent Land Mark</label>
    <type>TextArea</type>
</CustomField>