force-app/main/default/objects/Loan__c/fields/permanent_pincode__c.field-meta.xml
<CustomField>
    <fullName>permanent_pincode__c</fullName>
    <label>Permanent Pincode</label>
    <length>12</length>
    <type>Text</type>
</CustomField>