force-app/main/default/objects/Loan__c/fields/permanent_street__c.field-meta.xml
<CustomField>
    <fullName>permanent_street__c</fullName>
    <label>Permanent Street</label>
    <type>TextArea</type>
</CustomField>