force-app/main/default/objects/Loan__c/fields/pincode__c.field-meta.xml
<CustomField>
    <fullName>pincode__c</fullName>
    <label>Pincode</label>
    <length>60</length>
    <type>Text</type>
</CustomField>