force-app/main/default/objects/Loan__c/fields/Processing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Processing_Fee__c</fullName>
    <formula>IF(
    $RecordType.DeveloperName = &quot;AVANSE&quot;,
    CASE(
        TEXT(Tenure__c),
        &quot;6 month&quot;, 2500,
        &quot;12 month&quot;, 5000,
        0
    ),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Processing Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>