force-app/main/default/objects/Loan__c/fields/program_name__c.field-meta.xml
<CustomField>
    <fullName>program_name__c</fullName>
    <label>Program name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>CMA</fullName>
            </value>
            <value>
                <fullName>USP</fullName>
            </value>
            <value>
                <fullName>CAIRA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>