force-app/main/default/objects/Loan__c/fields/Redirection_URL__c.field-meta.xml
<CustomField>
    <fullName>Redirection_URL__c</fullName>
    <label>Redirection URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>