force-app/main/default/objects/Loan__c/fields/Relationship_With_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Relationship_With_Applicant__c</fullName>
    <label>Relationship With Applicant</label>
    <length>60</length>
    <type>Text</type>
</CustomField>