force-app/main/default/objects/Loan__c/fields/street__c.field-meta.xml
<CustomField>
    <fullName>street__c</fullName>
    <label>Street</label>
    <length>80</length>
    <type>Text</type>
</CustomField>