force-app/main/default/objects/Loan__c/recordTypes/AKSHAR.recordType-meta.xml
<RecordType>
    <fullName>AKSHAR</fullName>
    <active>true</active>
    <label>AKSHAR</label>
</RecordType>