force-app/main/default/objects/Loan__c/recordTypes/AVANSE.recordType-meta.xml
<RecordType>
    <fullName>AVANSE</fullName>
    <active>true</active>
    <label>AVANSE</label>
</RecordType>