force-app/main/default/objects/Loan__c/recordTypes/PROPELLD.recordType-meta.xml
<RecordType>
    <fullName>PROPELLD</fullName>
    <active>true</active>
    <label>PROPELLD</label>
</RecordType>