force-app/main/default/objects/Loan__c/validationRules/Applying_loan_for_other.validationRule-meta.xml
<ValidationRule>
    <fullName>Applying_loan_for_other</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Applying_loan_For__c, &quot;OTHER&quot;),
    ISBLANK(Relationship_With_Applicant__c)
)</errorConditionFormula>
    <errorMessage>Please fill Relationship With Applicant when Applying Loan For is OTHER.</errorMessage>
</ValidationRule>