force-app/main/default/objects/Loan__c/validationRules/Date_of_Birth_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Birth_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Date_Of_Birth__c &gt; ADDMONTHS(TODAY(), -216)</errorConditionFormula>
    <errorMessage>Date of birth must be atleast 18 years old</errorMessage>
</ValidationRule>