force-app/main/default/objects/Loan__c/validationRules/Monthly_income.validationRule-meta.xml
<ValidationRule>
    <fullName>Monthly_income</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(Earning_Status__c , &quot;Earning&quot;),
 OR( ISBLANK(Monthly_Income__c),
        Monthly_Income__c &lt; 1000)  
)</errorConditionFormula>
    <errorMessage>Please enter Monthly Income of at least 1000 when Earning Status is Earning.</errorMessage>
</ValidationRule>