force-app/main/default/objects/Loan__c/validationRules/Occupation_type.validationRule-meta.xml
<ValidationRule>
    <fullName>Occupation_type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Earning_Status__c, &quot;Earning&quot;),
    ISBLANK(TEXT(Occupation_type__c))
)</errorConditionFormula>
    <errorMessage>Please fill occuption type  when earning status is earning</errorMessage>
</ValidationRule>