force-app/main/default/objects/Loan__c/validationRules/Pan_number_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Pan_number_validation</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(
    REGEX(PAN_number__c , &quot;^[A-Z]{5}[0-9]{4}[A-Z]{1}$&quot;)
)</errorConditionFormula>
    <errorMessage>pan number format is not correct</errorMessage>
</ValidationRule>